Changes for Perl extension SDL-Tutorial-3DWorld

0.12 Fri 17 Dec 2010
	- Increase default (only) resolution to 1024x768

0.11 Fri 17 Dec 2010
	- OpenGL::GL_LINEAR_MIPMAP_LINEAR definitely looks better, especially
	  when it has text on it.
	- Change the skybox overlap to a minimum amount for slightly tighter
	  welding of the skybox edges.
	- Change to 24 bit colour depth so we don't get colour gradient steps

0.10 Fri 17 Dec 2010
	- The three teapots now match the official colours for the three axis
	- Adding direction label text to the chessboard image
	- Adding direction label text to all of the skybox image
	- The chessboard texture was upside down, corrected
	- The skybox images were backwards and inverted, corrected
	- Moved the "examples" (that weren't) into the private directory

0.09 Thu 16 Dec 2010
	- The skybox cube faces now overlap just slightly, which removes the
	  visible tearing between each face.
	- Now the skybox doesn't suck, tweak the light position closer to
	  where the sun is on the skybox should the shading and reflection
	  look absolutely correct.

0.08 Thu 16 Dec 2010
	- Low-sophistication (Smooth Hinting) anti-aliasing enabled for all
	  three of points, lines and polygons.
	- Fixed the chessboard material so it works with blending enabled.
	- Add GL hinting to make the texture scaling prettier.
	- Movement is now done via the move callback, locking movement to real
	  world time and making it independant of render speeds.
	- Half-assed support for identifying speeds in real metres per second.
	- Fixed a stupid trig bug in the camera movement logic, walking no
	  longer makes you skew sideways like a drunken troll when facing east.

0.07 Thu 16 Dec 2010
	- Like all good games, 3DWorld now runs full screen

0.06 Wed 15 Dec 2010
	- The landscape is now a 10x10 metre chess board
	- A new "at the origin" event filter for removing warp_mouse events,
	  as the first "ignore next" one didn't account for event queueing