@@ -2,6 +2,7 @@ Changes for Perl extension SDL-Tutorial-3DWorld
 
 0.12 Fri 17 Dec 2010
 	- Increase default (only) resolution to 1024x768
+	- Turned on double buffering to prevent mouselook flicker
 
 0.11 Fri 17 Dec 2010
 	- OpenGL::GL_LINEAR_MIPMAP_LINEAR definitely looks better, especially
